# Geometron

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
docs/api/: GameObject.md  color.md  editor.md  engine.md  enums.md  environment.md  hsv.md  point.md  transform.md
include/sol/: sol.hpp
scripts/: beziertool.lua  linedraw.lua  repl.lua
src/: main.cpp
src/engine/: LuaBackend.hpp  LuaEngine.cpp  LuaEngine.hpp  LuaIO.cpp  LuaModules.hpp  LuaSmartArray.cpp  LuaTypes.cpp  LuaUtils.cpp  LuaUtils.hpp
src/engine/bindings/: properties.hpp  properties_GameObjects.cpp  properties_triggers.cpp
src/hooks/: TrackedGameObject.cpp  TrackedGameObject.hpp  TrackingEditorLayer.cpp  TrackingEditorLayer.hpp
src/ui/: EnhancedTextPanel.cpp  EnhancedTextPanel.hpp  ScriptSelectorPopup.cpp  ScriptSelectorPopup.hpp  ScrollingWindow.cpp  ScrollingWindow.hpp
src/utils/: FontUtils.cpp  FontUtils.hpp  Keybinds.cpp  ResizingCircularBuffer.cpp  ResizingCircularBuffer.hpp  ScriptLoader.cpp  ScriptLoader.hpp  Settings.cpp  Settings.hpp
src/utils/types/: FixedString.hpp  GPoint.hpp  GTransform.hpp
